fix the checkbox styles and the modal overlapping other elements

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,7 @@ $spacer-xl: 32px;
 	--ptr-input-border-radius: #{$spacer-sm};
 	--ptr-input-spacing-y: 0.7rem;
 	--ptr-input-spacing-x: #{$spacer-md};
+	--ptr-input-line-height: 40px;
 
 	// label related
 	--ptr-label-font-size: var(--ptr-fs-sm);
@@ -74,6 +75,7 @@ $spacer-xl: 32px;
 			padding: var(--ptr-input-spacing-y) var(--ptr-input-spacing-x);
 			border-style: solid;
 			font-size: var(--ptr-label-font-size);
+			line-height: var(--ptr-input-line-height);
 
 			&:focus {
 				border-color: var(--ptr-input-border-color-active);
@@ -98,6 +100,7 @@ $spacer-xl: 32px;
 			transition:
 				border-color 0.2s,
 				background-color 0.2s;
+			line-height: var(--ptr-input-line-height);
 
 			&:focus {
 				border-color: var(--ptr-input-border-color-active);
@@ -115,8 +118,8 @@ $spacer-xl: 32px;
 
 		&--checkbox {
 			flex-direction: row;
-			flex-wrap: wrap;
-			align-items: center;
+			flex-wrap: nowrap;
+			align-items: flex-start;
 			margin-top: $spacer-md;
 			margin-bottom: $spacer-md;
 
@@ -124,6 +127,8 @@ $spacer-xl: 32px;
 				order: 1;
 				display: inline-block;
 				width: auto;
+				transform: translatey(-3%);
+
 				&:hover {
 					cursor: pointer;
 				}
@@ -144,6 +149,7 @@ $spacer-xl: 32px;
 					background-color 0.2s,
 					border-color 0.2s;
 				padding: 0px;
+				flex-shrink: 0;
 
 				&:checked {
 					background-color: var(--ptr-color-primary);
@@ -324,6 +330,7 @@ $spacer-xl: 32px;
 	top: 0;
 	width: 100%;
 	height: 100%;
+	z-index: 99;
 
 	&--visible {
 		display: flex;
